--- a/vignettes/shinyNORRRM.Rmd
+++ b/vignettes/shinyNORRRM.Rmd
@@ -17,13 +17,13 @@ Shiny app:
 
 ```{r shiny-app, eval = FALSE}
 install.packages("shinyNORRRM")
-Ternary::shinyNORRRM()
+shinyNORRRM::shinyNORRRM()
 ```
 Or if you want the latest development version of the package:
 
 ```{R Github package, eval = FALSE}
 if (!require("devtools")) install.packages("devtools")
-install_github("TheRFrog/shinyNORRRM")
+devtools::install_github("TheRFrog/shinyNORRRM")
 ```
 
 Once the package is installed, load it into the current R session with 
@@ -35,11 +35,11 @@ There are two stages to creating a ternary plot: first, rendering the plot, styl
 as you like it and pointing in any of the four compass directions; secondly, adding data.
 
 
-## Input a database
+## Run shiny App
 
 At its simplest, all you need to do is type
 ```{shiny run}
-TernaryPlot()
+shinyNORRRM()
 ```
 
 
@@ -47,4 +47,4 @@ TernaryPlot()
 
 I hope the package proves useful. If there"s anything it can"t do that you wish
 it could, please let me know by opening a
-[Github issue](https://github.com/ms609/Ternary/issues/new?title=Suggestion:+).
+[Github issue](https://github.com/TheRFrog/shinyNORRRM/issues).
